
  HCAT-182 Web services interface for HCatalog access and Pig, Hive, and MR job execution (ctdean, Rachel Gollub, and thejas via gates)

  HCAT-328 HCatLoader should report its input size so pig can estimate the number of reducers (traviscrawford via gates)

  HCAT-427 Document storage-based authorization (lefty via gates)

  IMPROVEMENTS
  HCAT-446 Enforce apache headers for all HCatalog code (traviscrawford via gates)

  HCAT-564 test.sh should let users specify the ant version (traviscrawford)

  HCAT-527 InputJobInfo should not be public (traviscrawford)

  HCAT-560 HCatClient should support addition of new columns to a Table.(mithunr via avandana)

  HCAT-558 Update test.sh to test from an extracted src-release (traviscrawford)

  HCAT-557 add modules to maven pom (toffer)

  HCAT-542 Fix 0.23 build and dependencies (traviscrawford)

  HCAT-531 HCatContext should be an enum (traviscrawford)

  HCAT-530 HCatBaseLoader.getSizeInBytes NPE when partition path is missing (traviscrawford)

  HCAT-518 Refactor hcatalog-core as subproject (traviscrawford and toffer)

  HCAT-548 Move topic creation in NotificationListener to a separate method (amalakar via avandana)

  HCAT-538 HCatalogStorer fails for 100GB of data with dynamic partitioning, number of partition is 300 (amalakar via toffer)

  HCAT-532 HiveClientCache shutdown hook should log at debug level (traviscrawford)

  HCAT-528 ivysettings.xml does not let you override .m2/repository or ivy.cache.dir setting (raja@cmbasics.com via traviscrawford)

  HCAT-516 HCOF should use less generic parameters (nitay via traviscrawford)

  HCAT-525 Remove dead classes from HCatalog Source Tree (amalakar via traviscrawford)

  HCAT-521 Ignore .reviewboardrc in git (nitay via traviscrawford)

  HCAT-519 Migrate pig-adapter/webhcat to maven dependencies and continue build cleanup (traviscrawford)

  HCAT-517 Misc. build cleanup (traviscrawford)
