@@ -26,10 +26,12 @@
 
   <path id="compile.class.path">
     <fileset dir="${build.dir}/lib/compile"/>
+    <fileset dir="${build.dir}/lib/provided"/>
   </path>
 
   <path id="test.class.path">
     <fileset dir="${build.dir}/lib/test"/>
+    <fileset dir="${build.dir}/lib/provided"/>
     <dirset dir="${path.to.basedir}/core/build/test/classes"/>
     <dirset dir="${basedir}/build/classes"/>
     <dirset dir="${basedir}/build/test/classes"/>
@@ -38,5 +40,21 @@
   <path id="findbugs.class.path">
     <fileset dir="${build.dir}/lib/compile"/>
   </path>
+
+  <target name="compile-resource">
+    <echo message="${ant.project.name}"/>
+    <property name="resources.dir"  location="${path.to.basedir}/conf"/>
+    <copy todir="${build.classes}/">
+      <fileset dir="${basedir}/src/main/config/"/>
+    </copy>
+    <echo message="Generating wadl xml file"/>
+    <javadoc access="public" classpathref="compile.class.path">
+      <fileset dir="${basedir}/src/main/java" defaultexcludes="yes"/>
+      <doclet name="com.sun.jersey.wadl.resourcedoc.ResourceDoclet"
+              pathref="compile.class.path">
+        <param name="-output" value="${build.classes}/resourcedoc.xml" />
+      </doclet>
+    </javadoc>
+  </target>
 
 </project>
