@@ -81,13 +81,13 @@
 
   <property>
     <name>templeton.pig.archive</name>
-    <value>hdfs:///user/templeton/pig-0.9.2.tar.gz</value>
+    <value>hdfs:///user/templeton/pig-0.10.0.tar.gz</value>
     <description>The path to the Pig archive.</description>
   </property>
 
   <property>
     <name>templeton.pig.path</name>
-    <value>pig-0.9.2.tar.gz/pig-0.9.2/bin/pig</value>
+    <value>pig-0.10.0.tar.gz/pig-0.10.0/bin/pig</value>
     <description>The path to the Pig executable.</description>
   </property>
 
@@ -99,13 +99,13 @@
 
   <property>
     <name>templeton.hive.archive</name>
-    <value>hdfs:///user/templeton/hcatalog-0.3.0.tar.gz</value>
+    <value>hdfs:///user/templeton/hive-0.10.0.tar.gz</value>
     <description>The path to the Hive archive.</description>
   </property>
 
   <property>
     <name>templeton.hive.path</name>
-    <value>hcatalog-0.3.0.tar.gz/hcatalog-0.3.0/bin/hive</value>
+    <value>hive-0.10.0.tar.gz/hive-0.10.0/bin/hive</value>
     <description>The path to the Hive executable.</description>
   </property>
 
