@@ -15,6 +15,7 @@
 # specific language governing permissions and limitations
 # under the License.
 
+#
 # templeton-log4j - configure the Templeton logging system
 
 # Define some default values that can be overridden by system properties
